Propagate active document URL to result of DOMParser.parseFromString()

This patch ensures that the URL of the active document is propagated to the
result of a DOMParser.parseFromString() as is specified in [1]. The changes
ensure that the w3c-test in [2] passes.

[1] - https://www.w3.org/TR/2016/WD-DOM-Parsing-20160517/#widl-DOMParser-parseFromString-Document-DOMString-str-SupportedType-type
[2] - http://w3c-test.org/domparsing/DOMParser-parseFromString-html.html

BUG=698128

Review-Url: https://codereview.chromium.org/2732863002
Cr-Commit-Position: refs/heads/master@{#455343}

Former-commit-id: c87999ea945e86d70cc5f98df81d65efc567cdd5